// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthErc20Vault can deposit and mint osToken in one transaction 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 212666,
}
`;

exports[`EthErc20Vault can deposit and mint osToken in one transaction 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 174079,
}
`;

exports[`EthErc20Vault can update state, deposit, and mint osToken in one transaction 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 266292,
}
`;

exports[`EthErc20Vault deposit emits transfer event 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 68820,
}
`;

exports[`EthErc20Vault deposit through receive fallback function emits transfer event 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 76122,
}
`;

exports[`EthErc20Vault enter exit queue emits transfer event 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 96236,
}
`;

exports[`EthErc20Vault update exit queue emits transfer event 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 137297,
}
`;
